--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
 
     <name>oalert</name>
-    <description>Demo project for Spring Boot</description>
+    <description>OAlert打卡考勤提醒</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -95,6 +95,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.47</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
 
