--- a/Dockerfile_deepin
+++ b/Dockerfile_deepin
@@ -1,18 +1,36 @@
-FROM ubuntu/jdk_tesseract:1.0
+FROM ubuntu/jdk12/tesseract:latest
+# 中文乱码
+# ENV LANG C.UTF-8
 # 下面是一些创建者的基本信息
 MAINTAINER devpail (devpail@163.com)
 VOLUME /tmp
 # 更新安装源
 # RUN apt-get update
 # 更新时区
-RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
-RUN export DEBIAN_FRONTEND=noninteractive
+# RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+# RUN export DEBIAN_FRONTEND=noninteractive
 # RUN apt-get install -y tzdata
-RUN dpkg-reconfigure --frontend noninteractive tzdata
+# RUN dpkg-reconfigure --frontend noninteractive tzdata
 # 安装图像识别软件
 # RUN apt-get install -y tesseract-ocr
 ADD target/oalert-0.0.1-SNAPSHOT.jar /app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
+
+#FROM ubuntu/jdk_tesseract:1.0
+## 下面是一些创建者的基本信息
+#MAINTAINER devpail (devpail@163.com)
+#VOLUME /tmp
+## 更新安装源
+## RUN apt-get update
+## 更新时区
+#RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+#RUN export DEBIAN_FRONTEND=noninteractive
+## RUN apt-get install -y tzdata
+#RUN dpkg-reconfigure --frontend noninteractive tzdata
+## 安装图像识别软件
+## RUN apt-get install -y tesseract-ocr
+#ADD target/oalert-0.0.1-SNAPSHOT.jar /app.jar
+#ENTRYPOINT ["java","-jar","/app.jar"]
 
 
 
